[metadata]
name = wally
version = 1.0
summary = Block storage test tool
description-file =
    README.md
author = kostiantyn danilov aka koder
author-email = kdanilov@mirantis.com
home-page = https://github.com/Mirantis/disk_perf_test_tool
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    wally

[entry_points]
console_scripts =
    wally = wally.__main__:main
